<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.achmadmuhaiminaziz_1202154219_modul1.SecondActivity">

    <TextView
        android:id="@+id/makanMalam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/makan_malam"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/namaTempat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/makanMalam"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/namaTempat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="Menu"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/menuMakanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/porsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menuMakanan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/porsi"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/jumlahPorsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/porsi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/harga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/jumlahPorsi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/harga"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/jumlahHarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/harga"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:textSize="24sp" />
</RelativeLayout>
